--- a/practice-react/src/index.css
+++ b/practice-react/src/index.css
@@ -2,5 +2,13 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 30px;
+}
 
+.student {
+  border: 2px solid black;
+  padding: 10px;
+  margin: 10px;
+  width: 850px;
+  display: inline-block;
 }
